[package]
name = "timekeeper"
version = "0.3.1"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
description = "A simple library to track how much time is used in different parts of a program"
repository = "https://github.com/fintelia/timekeeper"
license = "MIT/Apache-2.0"

[dependencies]
libc = ">=0.2.32"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "processthreadsapi" ] }

[features]
default = ["enable_timekeeper"]
enable_timekeeper = []
