[package]
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
description = "A simple library to track how much time is used in different parts of a program"
license = "MIT/Apache-2.0"
name = "timekeeper"
repository = "https://github.com/fintelia/timekeeper"
version = "0.3.1"
[dependencies]
libc = "*"

[features]
default = ["enable_timekeeper"]
enable_timekeeper = []

[target]
[target."cfg(windows)"]
[target."cfg(windows)".dependencies]
[target."cfg(windows)".dependencies.winapi]
features = ["processthreadsapi"]
version = "0.3"
